tests/src/frontend/typechecking/invalid/same_tparams_6.sk
mutable class Foo<T>(mutable v: T)
fun no<T>(x: mutable Foo<T>): T {
  freeze(x).v
}
